# Napocoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md  bitcoin_config.h
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  napocoin-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-napocoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  napocoin-cli.1  napocoin-qt.1  napocoin-tx.1  napocoin-wallet.1  napocoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkpointsync.cpp  checkpointsync.h  clientversion.cpp  clientversion.h  coins.h  compat.h  core_io.h  (+59 more)
(+337 files in other folders)
